==> moirahuang/FreeRTOSDemo/demos/ti/cc3220_launchpad/ccs/iot_i2c.c <==
#include "iot_i2c.h"
#include "stm32l4xx_hal.h"
#include <string.h>
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <stdint.h>
#include <inttypes.h>
#include <ti/drivers/I2C.h>
#define _IOT_I2C_H_
#define MOIRA_ASSERT(condition) if(!condition) { printf( "ASSEERT!!!!!"); while(1) {} }
#define IOT_I2C_STANDARD_MODE_BPS         ( 100000 )
#define IOT_I2C_FAST_MODE_BPS             ( 400000 )
#define IOT_I2C_FAST_MODE_PLUS_BPS        ( 1000000 )
#define IOT_I2C_HIGH_SPEED_BPS            ( 3400000 )
#define IOT_I2C_SUCCESS                       ( 0 )
#define IOT_I2C_INVALID_VALUE                 ( 1 )
#define IOT_I2C_BUSY                          ( 2 )
#define IOT_I2C_WRITE_FAILED                  ( 3 )
#define IOT_I2C_READ_FAILED                   ( 4 )
#define IOT_I2C_NACK                          ( 5 )
#define IOT_I2C_BUS_TIMEOUT                   ( 6 )
#define IOT_I2C_NOTHING_TO_CANCEL             ( 7 )
#define IOT_I2C_FUNCTION_NOT_SUPPORTED        ( 8 )
#define I2C_INSTANCES 2

IotI2CHandle_t iot_i2c_open( int32_t I2CInstance )
{
    IotI2CDescriptor * pDescriptor;
    I2C_Handle i2cHandle = NULL;
    I2C_init();

//    if ( HAL_UART_GetState( ( UART_HandleTypeDef * ) ( ( STM32_UART_HalContext_t * ) pxUarts[ lUartInstance ]->pvHalContext )->pxHuart ) == HAL_UART_STATE_RESET )
//           {
//               if( HAL_UART_Init( ( UART_HandleTypeDef * ) ( ( STM32_UART_HalContext_t * ) pxUarts[ lUartInstance ]->pvHalContext )->pxHuart ) != HAL_OK )
//               {
    if( I2CInstance > I2C_INSTANCES )
    {
        return NULL;
    }

    pDescriptor = &i2cInstances[ I2CInstance ];

    if( pDescriptor->busy == true )
    {
        return NULL;
    }

    pDescriptor->instance = I2CInstance;

    pDescriptor->params.transferCallbackFxn = I2C_CallbackInternal;
    pDescriptor->params.bitRate = I2C_100kHz;
    pDescriptor->params.transferMode = I2C_MODE_CALLBACK;
    pDescriptor->params.custom = NULL;

    pDescriptor->busy = true;

//               }
//           }
//       }

    return pDescriptor;
}

void iot_i2c_set_callback( IotI2CHandle_t const pxI2CPeripheral,
                           IotI2CCallback_t xCallback,
                           void * pvUserContext )
{
    IotI2CDescriptor * pDescriptor = pxI2CPeripheral;

    pDescriptor->userCallback = xCallback;
    pDescriptor->userContext = pvUserContext;
}

int32_t iot_i2c_read_sync( IotI2CHandle_t const pxI2CPeripheral,
                           uint8_t * const pvBuffer,
                           size_t xBytes ){
    I2C_Transaction i2cTransaction = {0};
    uint8_t readBuffer[1];
    i2cTransaction.slaveAddress = OPT_ADDR;
    i2cTransaction.writeBuf = NULL;
    i2cTransaction.writeCount = 0;
    i2cTransaction.readBuf = readBuffer;
    i2cTransaction.readCount = 1;
    bool status = I2C_transfer(i2cHandle, &i2cTransaction);
    if (status == false) {
        // Unsuccessful I2C transfer
        configPRINTF(("unsuccessful I2C read"));
    } else{
       configPRINTF(("successful I2C read"));
    }
    //not sure how to get data that's read yet
    return (int) i2cTransaction.readBuf;
}

int32_t iot_i2c_ioctl( IotI2CHandle_t const pxI2CPeripheral,
                       IotI2CIoctlRequest_t xI2CRequest,
                       void * const pvBuffer )
{
    IotI2CDescriptor * pDescriptor = pxI2CPeripheral;

    switch(xI2CRequest)
    {
        case eI2CSetMasterConfig:
        {
            IotI2CConfig_t * config = (IotI2CConfig_t*)pvBuffer;

            pDescriptor->params.bitRate = FrequencyToBitRate( config->ulBusFreq );

            I2C_Handle i2cHandle = I2C_open( pDescriptor->instance, &pDescriptor->params );

            if(i2cHandle == NULL)
            {
                return IOT_I2C_INVALID_VALUE;
            }

            pDescriptor->handle = i2cHandle;
        }
        break;

        case eI2CSetSlaveAddrWrite:
        case eI2CSetSlaveAddrRead:
        {
            uint8_t * address = (uint8_t *)pvBuffer;

            pDescriptor->transaction.slaveAddress *address;
        }
        break;

        default:
            MOIRA_ASSERT( 0 );
            break;
    }

    return IOT_I2C_SUCCESS;
}
